[project]
name = "voicesep"
description = "Seperation the voice to 2 track/person by voicesep, keep the office effect in Modelscope demo meanwhile accelerate the resample speed. 保证了voicesep的modelscope上的demo的效果的同时，加速运行时间。"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["yamlargparse", "torchaudio", "soundfile", "tqdm", "scipy", "numpy", "einops", "rotary_embedding_torch", "torchinfo", "packaging", "typing", "yamlargparse", "librosa", "opencv-python", "python_speech_features", "scenedetect", "torchvision", "pydub", "matplotlib"]

[project.urls]
Repository = "https://github.com/GuardSkill/ComfyUI-VoiceSep"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/GuardSkill/ComfyUI-VoiceSep/wiki"
"Bug Tracker" = "https://github.com/GuardSkill/ComfyUI-VoiceSep/issues"

[tool.comfy]
PublisherId = "guardskill"
DisplayName = "ComfyUI-VoiceSep"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

